[package]
name = "ampere-kernel"
version = "0.1.0-rc0"
authors = [ "Hyun Ho Bae" ]
edition = "2021"
description = "An Experimental Kernel Written in Rust"
documentation = "https://docs.rs/ampere-kernel"
readme = "./README.md"
repository = "https://github.com/TheRustUser/ampere-kernel"
license-file = "./LICENSE.md"
keywords = [ "osdev" ]
categories = [ "Operating System" ]

[dependencies]
bootloader_api = "0.11.3"